==> MikroElektronika/mikrosdk_v2/targets/avr_8bit/mikroe/avr/src/adc/implementation_1/hal_ll_adc.c <==
#include "hal_ll_adc.h"
#include "hal_ll_gpio.h"
#include "hal_ll_analog_in_map.h"
#define hal_ll_adc_get_module_state_address ((hal_ll_adc_handle_register_t *)*handle)
#define hal_ll_adc_get_handle (hal_ll_adc_handle_register_t *)hal_ll_adc_get_module_state_address->hal_ll_adc_handle
#define hal_ll_adc_get_base_from_hal_handle ((hal_ll_adc_hw_specifics_map_t *)((hal_ll_adc_handle_register_t *)\
                                            (((hal_ll_adc_handle_register_t *)(handle))->hal_ll_adc_handle))->hal_ll_adc_handle)->base
#define hal_ll_adc_get_base_handle ((hal_ll_adc_hw_specifics_map_t *)((hal_ll_adc_get_handle)->hal_ll_adc_handle))->base
#define hal_ll_adc_get_base_struct(_handle) ((const hal_ll_adc_base_handle_t *)_handle)
#define HAL_LL_ADC_ADCSRA_ADSC_BIT     (6)
#define HAL_LL_ADC_ADCSRA_ADEN         (0x80)
#define HAL_LL_ADC_ADCSRA_ADPS         (0x7)
#define HAL_LL_ADC_ADMUX_MASK          (0xFF)
#define HAL_LL_ADC_ADCSRB_MUX5         (3)
#define HAL_LL_ADC_ADMUX_REFS_INTERNAL (0xC0)
#define HAL_LL_ADC_INTERNAL_VREF_VALUE (2.56)

hal_ll_err_t hal_ll_adc_read(handle_t *handle, uint16_t *readDatabuf) {
    const hal_ll_adc_base_handle_t *base = hal_ll_adc_get_base_handle;

    uint16_t volatile adcl_var = 0, adch_var = 0;

    set_reg_bit( base->adcsra, HAL_LL_ADC_ADCSRA_ADSC_BIT ); // ADSC - ADC Start Conversion bit
    while( check_reg_bit( base->adcsra, HAL_LL_ADC_ADCSRA_ADSC_BIT )); // Wait for conversion to end

    // Documentation: "ADCL must be read first, then ADCH, to ensure that the content of the Data Registers belongs to the same conversion."
    adcl_var = read_reg( base->adcl );
    adch_var = ( read_reg( base->adch )) << 8;
    *readDatabuf = ( adch_var | adcl_var );

    return HAL_LL_ADC_SUCCESS;
}

static void _hal_ll_adc_hw_init( hal_ll_adc_hw_specifics_map_t *map ) {
    const hal_ll_adc_base_handle_t *base = hal_ll_adc_get_base_struct(map->base);

    clear_reg_bits( base->admux, HAL_LL_ADC_ADMUX_MASK );
    write_reg( base->adcsra, HAL_LL_ADC_ADCSRA_ADEN | HAL_LL_ADC_ADCSRA_ADPS );
}

static void hal_ll_adc_init( hal_ll_adc_hw_specifics_map_t *map ) {
    const hal_ll_adc_base_handle_t *base = hal_ll_adc_get_base_struct(map->base);

    _hal_ll_adc_hw_init( map );
    if( HAL_LL_ADC_VREF_INTERNAL == map->vref_input )
        set_reg_bits( base->admux, HAL_LL_ADC_ADMUX_REFS_INTERNAL );
    #ifdef HAS_ADC_MUX5_BIT
    if( 8 > map->channel ) {
        set_reg_bits( base->admux, map->channel );
    } else {
        /*
         * When ADC channel number is higher than 7 (0b1000 - 0b1111), the lower 3 bits
         * are written to ADMUX[MUX2:0] and the highest bit is written to ADCSRB[MUX5].
         */
        set_reg_bits( base->admux, map->channel & 0x7 );
        set_reg_bit( base->adcsrb, HAL_LL_ADC_ADCSRB_MUX5 );
    }
    #else 
        set_reg_bits( base->admux, map->channel );
    #endif
}
