==> MikroElektronika/mikrosdk_v2/targets/arm/mikroe/stm32/src/adc/implementation_2/hal_ll_adc.c <==
#include "hal_ll_adc.h"
#include "hal_ll_gpio.h"
#include "hal_ll_adc_pin_map.h"
#include "delays.h"
#define RevisionY
#define hal_ll_adc_get_module_state_address ((hal_ll_adc_handle_register_t *)*handle)
#define hal_ll_adc_get_handle (hal_ll_adc_handle_register_t *)hal_ll_adc_get_module_state_address->hal_ll_adc_handle
#define hal_ll_adc_get_base_struct(_handle) ((hal_ll_adc_base_handle_t *)_handle)
#define hal_ll_adc_get_base_from_hal_handle ((hal_ll_adc_hw_specifics_map_t *)((hal_ll_adc_handle_register_t *)\
                                            (((hal_ll_adc_handle_register_t *)(handle))->hal_ll_adc_handle))->hal_ll_adc_handle)->base
#define hal_ll_adc_module_num(_module_num) (_module_num - 1)
#define HAL_LL_ADC_ISR_OFFSET                  ( 0x00 )
#define HAL_LL_ADC_IER_OFFSET                  ( 0x04 / 4 )
#define HAL_LL_ADC_CR_OFFSET                   ( 0x08 / 4 )
#define HAL_LL_ADC_CFGR_OFFSET                 ( 0x0C / 4 )
#define HAL_LL_ADC_CFGR2_OFFSET                ( 0x10 / 4 )
#define HAL_LL_ADC_SMPR1_OFFSET                ( 0x14 / 4 )
#define HAL_LL_ADC_SMPR2_OFFSET                ( 0x18 / 4 )
#define HAL_LL_ADC_PCSEL_OFFSET                ( 0x1C / 4 )
#define HAL_LL_ADC_LTR1_OFFSET                 ( 0x20 / 4 )
#define HAL_LL_ADC_HTR1_OFFSET                 ( 0x24 / 4 )
#define HAL_LL_ADC_SQR1_OFFSET                 ( 0x30 / 4 )
#define HAL_LL_ADC_SQR2_OFFSET                 ( 0x34 / 4 )
#define HAL_LL_ADC_SQR3_OFFSET                 ( 0x38 / 4 )

hal_ll_err_t hal_ll_adc_read( handle_t *handle, uint16_t *readDatabuf )
{
    static uint32_t *reg;
    hal_ll_adc_hw_specifics_map_local = hal_ll_get_specifics(hal_ll_adc_get_module_state_address);
    low_level_handle = hal_ll_adc_get_handle;
    hal_ll_base_addr_t *base = ( hal_ll_base_addr_t * )hal_ll_adc_hw_specifics_map_local->base ;

    // Preselect channel.
    *( base + HAL_LL_ADC_PCSEL_OFFSET ) |= 1ul << hal_ll_adc_hw_specifics_map_local->channel;
    // First conversion in regular sequence.
    *( base + HAL_LL_ADC_SQR1_OFFSET )  |= ( uint32_t )( hal_ll_adc_hw_specifics_map_local->channel ) << HAL_LL_ADC_FIRST_CONV;
    // Second conversion in regular sequence.
    *( base + HAL_LL_ADC_SQR1_OFFSET )  |= ( uint32_t )( hal_ll_adc_hw_specifics_map_local->channel ) << HAL_LL_ADC_SECOND_CONV;
    // Third conversion in regular sequence.
    *( base + HAL_LL_ADC_SQR1_OFFSET )  |= ( uint32_t )( hal_ll_adc_hw_specifics_map_local->channel ) << HAL_LL_ADC_THIRD_CONV;
    // Fourth conversion in regular sequence.
    *( base + HAL_LL_ADC_SQR1_OFFSET )  |= ( uint32_t )( hal_ll_adc_hw_specifics_map_local->channel ) << HAL_LL_ADC_FOURTH_CONV;
    // Start of regular conversion.
    *( base + HAL_LL_ADC_CR_OFFSET )    |= HAL_LL_ADC_CR_ADSTART;

    // The application should allow a delay of tSTAB between power up and start of conversion
    Delay_1us();

    // Wait until end of sampling phase is reached.
    while ( !( *( base + HAL_LL_ADC_ISR_OFFSET ) & HAL_LL_ADC_ISR_EOSMP ) );

    do
    {
        // Read conversion result from the last converted regular channel.
        reg = ( *( base + HAL_LL_ADC_DR_OFFSET ) );
    } while ( *( base + HAL_LL_ADC_ISR_OFFSET ) & HAL_LL_ADC_ISR_EOC );
    // Wait for EOC = 0.
    // It is cleared by software writing 1 to it or by reading the ADC_DR.
    *readDatabuf = reg;

    return HAL_LL_ADC_SUCCESS;
}

static void _hal_ll_adc_hw_init( hal_ll_base_addr_t *base, uint32_t resolution )
{
    /* For the startup time of the ADC voltage regulator,
       please refer to device datasheet for TADCVREG_STUP parameter */
    static uint32_t tadcvreg_stup = 0;
    static uint32_t *reg;

    // Set HSI as PER CK.
    clear_reg_bit( _RCC_D1CCIPR , HAL_LL_ADC_CKPERSEL_BIT1 );
    clear_reg_bit( _RCC_D1CCIPR , HAL_LL_ADC_CKPERSEL_BIT0 );

    // Select HSI as adc clock.
    set_reg_bit( _RCC_D3CCIPR , HAL_LL_ADC_ADCSEL_BIT1 );
    clear_reg_bit( _RCC_D3CCIPR , HAL_LL_ADC_ADCSEL_BIT0 );

    // To start ADC operations, it is first needed to exit deep-power-down.
    if ( *( base + HAL_LL_ADC_CR_OFFSET ) & HAL_LL_ADC_CR_DEEPPWD )
    {
        *( base + HAL_LL_ADC_CR_OFFSET ) &= ~HAL_LL_ADC_CR_DEEPPWD;
    }
    // It is mandatory to enable the ADC internal voltage regulator by setting ADVREGEN.
    if ( !( *( base + HAL_LL_ADC_CR_OFFSET ) & HAL_LL_ADC_CR_ADVREGEN ) )
    {
        *( base + HAL_LL_ADC_CR_OFFSET ) |= HAL_LL_ADC_CR_ADVREGEN;
    }
    // The software must wait for the startup time of the ADC voltage regulator.
    tadcvreg_stup = 10 * ( Get_Fosc_kHz() / 100 );
    while ( tadcvreg_stup )
    {
        tadcvreg_stup--;
    }
    // Enable ADC interrupts.
    *( base + HAL_LL_ADC_IER_OFFSET ) |= HAL_LL_ADC_IER_EINT;
    // Disable ADC
    if ( *( base + HAL_LL_ADC_CR_OFFSET ) & HAL_LL_ADC_CR_ADEN )  // If enabled.
    {
        *( base + HAL_LL_ADC_CR_OFFSET ) |= HAL_LL_ADC_CR_ADDIS;  // Disable adc.
        while ( *( base + HAL_LL_ADC_CR_OFFSET ) & HAL_LL_ADC_CR_ADDIS );
    }
    // Voltage reference enable, ckmode - async, div 2.
    if ( (uint32_t)base == ADC2_BASE_ADDR )
    {
        base = ADC1_BASE_ADDR;
        *( base + HAL_LL_ADC_CCR_OFFSET ) |= ( ( 1ul << 22 ) |
                                            ( 1ul << 23 ) |
                                            ( 1ul << 19 ) );
        base = ADC2_BASE_ADDR;
    } else
    {
        *( base + HAL_LL_ADC_CCR_OFFSET ) |= ( ( 1ul << 22 ) |
                                            ( 1ul << 23 ) |
                                            ( 1ul << 19 ) );
    }
    // Calibrate.
    *( base + HAL_LL_ADC_CR_OFFSET ) &= ~HAL_LL_ADC_CR_ADEN;
    // Set single-ended input.
    *( base + HAL_LL_ADC_CR_OFFSET ) &= ~HAL_LL_ADC_CR_ADCALDIF;
    // Linearity calibration disable.
    *( base + HAL_LL_ADC_CR_OFFSET ) &= ~HAL_LL_ADC_CR_ADCALLIN;
    // Start calibration.
    *( base + HAL_LL_ADC_CR_OFFSET ) |= HAL_LL_ADC_CR_ADCAL;
    // Wait until calibration is complete.
    while ( *( base + HAL_LL_ADC_CR_OFFSET ) & HAL_LL_ADC_CR_ADCAL );
    // Stop ongoing injected conversions.
    *( base + HAL_LL_ADC_CR_OFFSET ) |= HAL_LL_ADC_CR_BOOST;
    while ( *( base + HAL_LL_ADC_CR_OFFSET ) & HAL_LL_ADC_CR_ADSTART );
    while ( *( base + HAL_LL_ADC_CR_OFFSET ) & HAL_LL_ADC_CR_JADSTART );
    // Set data resolution.
    reg = ( base + HAL_LL_ADC_CFGR_OFFSET );
    *reg &= HAL_LL_RESOLUTION_MASK;
    *reg |= resolution;

    // Discontinuous mode disabled.
    *( base + HAL_LL_ADC_CFGR_OFFSET ) &= ~HAL_LL_ADC_CFGR_DISCEN;
    // Single conversion mode.
    *( base + HAL_LL_ADC_CFGR_OFFSET ) &= ~HAL_LL_ADC_CFGR_CONT;
    // Regular channel sequence length.
    *( base + HAL_LL_ADC_SQR1_OFFSET ) &= HAL_LL_ADC_SQR1_RCSL;
    // Clear ADRDY bit.
    *( base + HAL_LL_ADC_ISR_OFFSET ) |= HAL_LL_ADC_ISR_ADRDY;
    // Enable ADC.
    *( base + HAL_LL_ADC_CR_OFFSET ) |= HAL_LL_ADC_CR_ADEN;
    // Wait for ADDRDY.
    while ( !( *( base + HAL_LL_ADC_ISR_OFFSET ) & HAL_LL_ADC_ISR_ADRDY ) );
}

static void hal_ll_adc_init( hal_ll_adc_hw_specifics_map_t *map ) {

    hal_ll_gpio_analog_input( hal_ll_gpio_port_base( hal_ll_gpio_port_index( map->pin ) ),
                                                     hal_ll_gpio_pin_mask( map->pin ) );

    _hal_ll_adc_enable_clock( map->module_index );

    _hal_ll_adc_hw_init((hal_ll_base_addr_t *)map->base, map->resolution);

}
